first work cl-srv

--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -1,13 +1,9 @@
 cmake_minimum_required(VERSION 3.15.0)
-set(CLIENT_SOURCES tClient.cpp)
-set(CLIENT_HEADERS tClient.h)
-# Specify the UI files
-set(FORMS
-    tClient.ui
-)
 
-# Generate the UI header files
-qt5_wrap_ui(UI_HEADERS ${FORMS})
+find_package(Qt5 REQUIRED COMPONENTS Core Network Widgets)
+include_directories(${Qt5_INCLUDE_DIRS})
+set(CMAKE_AUTOMOC ON)
 
-add_library(tClient ${CLIENT_SOURCES} ${CLIENT_HEADERS} ${UI_HEADERS})
-target_include_directories(tClient PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+add_executable(client tclient.cpp)
+
+target_link_libraries(client Qt5::Core Qt5::Network Qt5::Widgets)
