--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.15.0)
-set(SERVER_SOURCES tServer.cpp)
-set(SERVER_HEADERS tServer.h)
 
-add_library(tServer ${CLIENT_SOURCES} ${CLIENT_HEADERS})
-target_include_directories(tServer PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+find_package(Qt5 REQUIRED COMPONENTS Core Network Widgets)
+include_directories(${Qt5_INCLUDE_DIRS})
+set(CMAKE_AUTOMOC ON)
+
+add_executable(server tserver.cpp)
+
+target_link_libraries(server Qt5::Core Qt5::Network Qt5::Widgets)
