--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,26 +3,23 @@ set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(PROJECT_NAME "qt-multithreading")
-
+set(PROJECT_EXE ${PROJECT_NAME}_exe)
 project(${PROJECT_NAME} VERSION 1.0.0)
 
-find_package(Qt5 REQUIRED COMPONENTS Core Network Widgets)
-include_directories(${Qt5_INCLUDE_DIRS})
 set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTORCC ON)
 
-QT5_WRAP_CPP(MOC_FILES
-    src/client/tclient.cpp
-    src/server/tserver.cpp)
+find_package(Qt5 REQUIRED COMPONENTS Core Network Widgets)
 
-#add_subdirectory(src/client)
-#add_subdirectory(src/server)
+file(GLOB_RECURSE PROJECT_SOURCES
+    src/*.h
+    src/*.cpp
+)
 
-
-
-add_executable(main main.cpp ${MOC_Files})
+add_executable(${PROJECT_EXE} ${PROJECT_SOURCES})
 
 enable_testing()
-#add_subdirectory(test/server)
-#add_subdirectory(test/client)
+add_subdirectory(test/server)
+add_subdirectory(test/client)
 
-target_link_libraries(main Qt5::Core Qt5::Network Qt5::Widgets)
+target_link_libraries(${PROJECT_EXE} Qt5::Core Qt5::Network Qt5::Widgets)
